Add character escaping tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,9 @@ export(R_identity)
 export(R_identity_reg)
 export(R_ls)
 export(R_null)
+export(escape_chars_)
 useDynLib(rspeed, .registration=TRUE)
+useDynLib(rspeed,C_escape_chars)
 useDynLib(rspeed,C_identity)
 useDynLib(rspeed,C_ls)
 useDynLib(rspeed,C_null)
