--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,11 +5,14 @@ Authors@R: "Winston Chang <winston@stdout.org> [aut, cre]"
 Description: 
 Depends:
     R (>= 3.0)
+Imports:
+    Rcpp
 Suggests:
     knitr,
     microbenchmark,
     pryr,
     testthat
+LinkingTo: Rcpp (>= 0.11.1)
 License: MIT + file LICENSE
 URL: https://github.com/wch/rspeed/
 Roxygen: list(wrap = FALSE)
