Add C and C++ implementations of asJSON.numeric

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,13 @@ export(R_identity)
 export(R_identity_reg)
 export(R_ls)
 export(R_null)
+export(asJSONNumeric)
+export(as_json_numeric_collapsed)
 export(escape_chars_)
 export(escape_chars_cpp)
 importFrom(Rcpp,cppFunction)
 useDynLib(rspeed, .registration=TRUE)
+useDynLib(rspeed,C_as_json_numeric_collapsed)
 useDynLib(rspeed,C_escape_chars)
 useDynLib(rspeed,C_identity)
 useDynLib(rspeed,C_ls)
